unpackaged/main/default/objects/Delivery_Order__c/Delivery_Order__c.object-meta.xml
<CustomObject>
    <label>Delivery Order</label>
    <nameField>
        <displayFormat>Delivery Order-{0000}</displayFormat>
        <label>Delivery Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>