unpackaged/main/default/objects/Delivery_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Order Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Delivery Orders</relationshipLabel>
    <relationshipName>Delivery_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>