unpackaged/main/default/objects/Delivery_Order__c/fields/Freight_Operator__c.field-meta.xml
<CustomField>
    <fullName>Freight_Operator__c</fullName>
    <label>Freight Operator</label>
    <length>18</length>
    <type>Text</type>
</CustomField>