unpackaged/main/default/objects/Delivery_Order__c/fields/Number_of_parcels__c.field-meta.xml
<CustomField>
    <fullName>Number_of_parcels__c</fullName>
    <label>Number of parcels</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>