unpackaged/main/default/objects/Delivery_Order__c/validationRules/Invoice_paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_paid</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity__r.Invoice_paid__c =0</errorConditionFormula>
    <errorMessage>The delivery Order can not be issued as the invoice has not yet been paid</errorMessage>
</ValidationRule>